--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -22,6 +22,7 @@ LBL_InitCodeFormat=Init Code Format:
 LBL_ReplaceCodeFormat=Replace Code Format:
 LBL_NonI18nRegExpFormat=Non-Internationalization Regular Expression Format:
 LBL_I18nRegExpFormat=Internationalization Regular Expression Format:
+ACS_HelpStringCustomEditor=N/A
 
 #I18nAction
 CTL_I18nAction=Inte&rnationalize...
@@ -57,11 +58,14 @@ TXT_ReplaceCodeFormatDesc=Noninternationalized hard-coded strings in the resourc
 
 #I18nPanel
 CTL_CancelButton=Cancel
+CTL_CancelButton_Mnem=C
 CTL_HelpButton=Help
 CTL_InfoButton=Info
 CTL_ReplaceButton=Replace
 CTL_SkipButton=Skip
 LBL_Replace=Replace:
+ACS_I18nPanel=This panel allows you to choose or create Bundle, set format of replace string and select key and value.
+
 
 #I18nUtil
 TXT_Alnum=any character of [:digit:] or [:alpha:] class
@@ -91,6 +95,7 @@ CTL_ComponentLabel=Component:
 CTL_FoundInLabel=Found in:
 CTL_PropertyLabel=Property:
 CTL_StringLabel=String:
+ACS_InfoPanel=N/A
 
 #InsertI18NStringAction
 CTL_InsertI18nString=Insert Internationalized &String...
@@ -109,12 +114,15 @@ MSG_CouldNotReplace=Could not replace a hardcoded string that was found.
 CTL_Arguments=Arguments...
 
 #JavaReplacePanel
+ACS_JavaReplacePanel=N/A
 CTL_DefaultRadio=<default>
-CTL_GenerateField=Generate Field
+CTL_DefaultRadio_Mnem=d
+CTL_GenerateField= \ Generate Field
+CTL_GenerateField_Mnem=G
 CTL_RemoveButton_Mnem=R
 CTL_AddButton_Mnem=A
 LBL_Parameters_Mnem=g
-LBL_Code_Mnem=C
+LBL_Code_Mnem=o
 CTL_Arguments_Mnem=g
 LBL_Arguments_Mnem=g
 LBL_BundleName_Mnem=u
@@ -132,8 +140,11 @@ CTL_ReplaceButton_Mnem=R
 CTL_Parameters=Parameters...
 CTL_ParamsPanelTitle=Message Format Arguments
 LBL_Field=Field:
+LBL_Field_Mnem=l
 LBL_Identifier=Identifier:
+LBL_Identifier_Mnem=I
 LBL_InitFormat=Init String:
+LBL_InitFormat_Mnem=n
 LBL_InitStringFormatEditor=Init Code Format Editor
 LBL_Modifiers=Modifiers:
 
@@ -166,18 +177,25 @@ enables you to internationalize all of your Java at once, a test tool, which rep
 set the locale in which the application is to run.
 
 #ParamsPanel
+ACS_ParamsPanel=N/A
 CTL_AddButton=Add
+CTL_AddButton_Mnem=A
 CTL_RemoveButton=Remove
+CTL_RemoveButton_Mnem=R
 LBL_Code=Code:
+LBL_Code_Mnem=o
 LBL_Comment=Comment:
 LBL_Parameters=Arguments:
+LBL_Parameters_Mnem=g
 
 #PropertyPanel
 CTL_Format=Format...
+CTL_Format_Mnem=o
 LBL_Key=Key:
 LBL_ReplaceFormat=Replace String:
 LBL_ReplaceStringFormatEditor=Replace Code Format Editor
 LBL_Value=Value:
+ACS_PropertyPanel=This panel allows you to set format of replace string and select key and value.
 
 #ResourceBundleStringEditorForm
 CTL_PropertyEditorName=Resource Bundle
@@ -196,6 +214,7 @@ CTL_Template_Dialog_RootTitle=Filesystem:
 LBL_BundleName=Bundle Name:
 LBL_ResourceTitleBorder=Choose Bundle
 LBL_TemplateName=Object &Name
+ACS_ResourcePanel=This panel allows you to create new or open existing Bundle.
 
 #filenames
 Services/org-netbeans-modules-i18n-I18nOptions.settings=Internationalization
