--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -16,6 +16,7 @@ LBL_Source=Source:
 LBL_Source_Mnem=S
 TXT_HasNoAdditonal=Has No Additional Values
 TXT_ModifyAdditional=Modify additional values.
+ACS_AdditionalWizardPanel=N/A
 
 # HardStringWizardPanel
 LBL_FoundStrings=Found Hard Coded Strings:
@@ -63,6 +64,7 @@ TXT_Loading=Loading
 TXT_SearchingIn=Searching in
 TXT_SelectResource=Select resource for sources.
 TXT_SelectTestResource=Select the resource to check for corresponding resources.
+ACS_ResourceWizardPanel=N/A
 
 # SourceWizardPanel
 CTL_AddSource=Add Source(s)
@@ -75,9 +77,13 @@ LBL_SelectedSources_Mnem=S
 LBL_SelectSources=Select Sources
 TXT_SelectSources=Select sources to internationalize.
 TXT_SelecTestSources=Select sources to test their internationalized strings.
+ACS_SourceWizardPanel=N/A
 
 # TestStringWizardPanel
 LBL_I18nString=Internationalized String
 TXT_AllI18nStrings=All internationalized strings have their resource.
 TXT_AllI18nStringsSource=All internationalized strings for this source have their resource.
 TXT_FoundMissingResource=Found internationalized strings with missing resource.
+ACS_TestStringWizardPanel=N/A
+
+ACS_ProgressWizardPanel=N/A
