--- a/i18n/src/org/netbeans/modules/i18n/Layer.xml
+++ b/i18n/src/org/netbeans/modules/i18n/Layer.xml
@@ -16,7 +16,7 @@ Microsystems, Inc. All Rights Reserved.
 <filesystem>
 
     <folder name="Shortcuts">
-        <file name="CA-I[org.netbeans.modules.i18n.InsertI18nStringAction].instance" />
+        <file name="CS-J[org.netbeans.modules.i18n.InsertI18nStringAction].instance" />
     </folder>
 
     <folder name="Actions">
@@ -24,6 +24,7 @@ Microsystems, Inc. All Rights Reserved.
             <file name="org-netbeans-modules-i18n-I18nGroupMenuAction.instance" />
             <file name="org-netbeans-modules-i18n-wizard-I18nWizardAction.instance" />
             <file name="org-netbeans-modules-i18n-wizard-I18nTestWizardAction.instance" />
+            <file name="org-netbeans-modules-i18n-InsertI18nStringAction.instance" />
         </folder>
     </folder>
   
