--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -23,6 +23,8 @@ LBL_ReplaceCodeFormat=Replace Code Format:
 LBL_NonI18nRegExpFormat=Non-Internationalization Regular Expression Format:
 LBL_I18nRegExpFormat=Internationalization Regular Expression Format:
 ACS_HelpStringCustomEditor=N/A
+ACS_HelpStringCombo=N/A
+ACS_HelpStringList=N/A
 
 #I18nAction
 CTL_I18nAction=Inte&rnationalize...
@@ -59,10 +61,15 @@ TXT_ReplaceCodeFormatDesc=Noninternationalized hard-coded strings in the resourc
 #I18nPanel
 CTL_CancelButton=Cancel
 CTL_CancelButton_Mnem=C
+ACS_CTL_CancelButton=N/A
 CTL_HelpButton=Help
+ACS_CTL_HelpButton=N/A
 CTL_InfoButton=Info
+ACS_CTL_InfoButton=N/A
 CTL_ReplaceButton=Replace
+ACS_CTL_ReplaceButton=N/A
 CTL_SkipButton=Skip
+ACS_CTL_SkipButton=N/A
 LBL_Replace=Replace:
 ACS_I18nPanel=This panel allows you to choose or create Bundle, set format of replace string and select key and value.
 
@@ -96,10 +103,16 @@ CTL_FoundInLabel=Found in:
 CTL_PropertyLabel=Property:
 CTL_StringLabel=String:
 ACS_InfoPanel=N/A
+ACS_stringText=N/A
+ACS_propertyText=N/A
+ACS_componentText=N/A
+ACS_foundInText=N/A
 
 #InsertI18NStringAction
 CTL_InsertI18nString=Insert Internationalized &String...
 CTL_OKButton=OK
+CTL_OKButton_Mnem=O
+ACS_CTL_OKButton=N/A
 MSG_CantInsertInGuarded=Cannot insert internationalized string in guarded block.
 
 #JavaI18nString
@@ -112,6 +125,7 @@ MSG_CouldNotReplace=Could not replace a hardcoded string that was found.
 
 #JavaPropertyPanel
 CTL_Arguments=Arguments...
+ACS_CTL_Arguments=N/A
 
 #JavaReplacePanel
 ACS_JavaReplacePanel=N/A
@@ -131,7 +145,7 @@ CTL_BrowseButton_Mnem=B
 CTL_Format_Mnem=F
 LBL_Value_Mnem=V
 LBL_Key_Mnem=K
-LBL_Comment_Mnem=C
+LBL_Comment_Mnem=m
 FCTL_Format_Mnem=C
 CTL_HelpButton_Mnem=H
 CTL_InfoButton_Mnem=I
@@ -179,23 +193,30 @@ set the locale in which the application is to run.
 #ParamsPanel
 ACS_ParamsPanel=N/A
 CTL_AddButton=Add
+ACS_CTL_AddButton=N/A
 CTL_AddButton_Mnem=A
 CTL_RemoveButton=Remove
+ACS_CTL_RemoveButton=N/A
 CTL_RemoveButton_Mnem=R
 LBL_Code=Code:
 LBL_Code_Mnem=o
 LBL_Comment=Comment:
 LBL_Parameters=Arguments:
 LBL_Parameters_Mnem=g
+ACS_paramsList=N/A
 
 #PropertyPanel
 CTL_Format=Format...
-CTL_Format_Mnem=o
+CTL_Format_Mnem=r
+ACS_CTL_Format=N/A
 LBL_Key=Key:
 LBL_ReplaceFormat=Replace String:
 LBL_ReplaceStringFormatEditor=Replace Code Format Editor
 LBL_Value=Value:
 ACS_PropertyPanel=This panel allows you to set format of replace string and select key and value.
+ACS_valueText=N/A
+ACS_commentText=N/A
+ACS_replaceFormatTextField=N/A
 
 #ResourceBundleStringEditorForm
 CTL_PropertyEditorName=Resource Bundle
@@ -206,7 +227,10 @@ TXT_ResourceBundle=RB
 
 #ResourcePanel
 CTL_BrowseButton=Browse...
+ACS_CTL_BrowseButton=N/A
 CTL_NewButton=New...
+ACS_CTL_NewButton=N/A
+ACS_ResourceText=N/A
 CTL_SelectPropDO_Dialog_RootTitle=Select:
 CTL_SelectPropDO_Dialog_Title=Select Resource Bundles
 CTL_Template_Dialog_Title=New Bundle
@@ -214,6 +238,7 @@ CTL_Template_Dialog_RootTitle=Filesystem:
 LBL_BundleName=Bundle Name:
 LBL_ResourceTitleBorder=Choose Bundle
 LBL_TemplateName=Object &Name
+ACS_TEXT_ObjectNameInputPanel=N/A
 ACS_ResourcePanel=This panel allows you to create new or open existing Bundle.
 
 #filenames
