--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -161,6 +161,18 @@ LBL_InitFormat=Init String:
 LBL_InitFormat_Mnem=n
 LBL_InitStringFormatEditor=Init Code Format Editor
 LBL_Modifiers=Modifiers:
+ACS_staticCheck=N/A
+ACS_identifierTextField=N/A
+ACS_transientCheck=N/A
+ACS_defaultRadio=N/A
+ACS_fieldTextField=N/A
+ACS_initButton=N/A
+ACS_publicRadio=N/A
+ACS_generateCheck=N/A
+ACS_finalCheck=N/A
+ACS_privateRadio=N/A
+ACS_initTextField=N/A
+ACS_protectedRadio=N/A
 
 # LocaleExecutor
 LBL_LocaleExecutorDisplayName=Locale External Execution
