--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -17,8 +17,12 @@ LBL_Source_Mnem=S
 TXT_HasNoAdditonal=Has No Additional Values
 TXT_ModifyAdditional=Modify additional values.
 ACS_AdditionalWizardPanel=N/A
+ACS_sourceCombo=N/A
 
 # HardStringWizardPanel
+ACS_HardStringWizardPanel=Modify Found Strings.
+ACS_CTL_sourceCombo=N/A
+ACS_hardStringTable=N/A
 LBL_FoundStrings=Found Hard Coded Strings:
 LBL_FoundStrings_Mnem=F
 LBL_HardString=Hard Coded String
@@ -56,21 +60,27 @@ CTL_Cancel=Cancel
 CTL_Resource=Resource
 CTL_SelectResource=Select Resource
 CTL_SelectResource_Mnem=R
+ACS_CTL_SelectResource=N/A
 CTL_SelectResourceAll=Select All
 CTL_SelectResourceAll_Mnem=A
+ACS_CTL_SelectResourceAll=N/A
+ACS_resourcesTable=N/A
 CTL_Source=Source
 LBL_SelectResource=Select Resource
 TXT_Loading=Loading
 TXT_SearchingIn=Searching in
 TXT_SelectResource=Select resource for sources.
 TXT_SelectTestResource=Select the resource to check for corresponding resources.
-ACS_ResourceWizardPanel=N/A
+ACS_ResourceWizardPanel=Select resource for sources.
 
 # SourceWizardPanel
 CTL_AddSource=Add Source(s)
 CTL_AddSource_Mnem=A
+ACS_CTL_AddSource=N/A
 CTL_RemoveSource=Remove Source(s)
 CTL_RemoveSource_Mnem=R
+ACS_CTL_RemoveSource=N/A
+ACS_sourcesList=N/A
 LBL_Filesystems=Filesystems:
 LBL_SelectedSources=Selected Sources:
 LBL_SelectedSources_Mnem=S
