--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -14,7 +14,7 @@
 # When found string in guarded block, but then changed appropiate property
 # by user (since the i18n dialog is not modal) and trying to replace yet not 
 # existing string.
-MSG_StringNotFoundInGuarded=No hardcoded string found in a guarded block yet.
+MSG_StringNotFoundInGuarded=No hard-coded string found in guarded block yet.
 
 #HelpStringCustomEditor
 LBL_Arguments=Arguments:
@@ -36,8 +36,8 @@ LBL_I18nGroupActionName=&Internationalization
 CTL_I18nDialogTitle=Internationalize
 CTL_InfoPanelTitle=Information About Found String
 EXC_BadKey=The key for your property is not valid. Please choose another key.
-MSG_NoInternationalizableString=No hardcoded, non-internationalized strings were found in this file.
-MSG_CouldNotOpen=The document could not be opened; cannot internationalize.
+MSG_NoInternationalizableString=No hard-coded, non-internationalized strings were found in this file.
+MSG_CouldNotOpen=The document could not be opened. Cannot internationalize.
 
 #I18nOptions
 LBL_Internationalization=Internationalization
@@ -48,15 +48,15 @@ TXT_GenerateFieldDesc=Generates field initialized with bundle for java sources.
 TXT_AdvancedWizard=Advanced Wizard
 TXT_AdvancedWizardDesc=If True, displays an additional pane in wizard for generating fields that reference resource bundles.
 TXT_InitCodeFormat=Init Code Format
-TXT_InitCodeFormatDesc=The format to use for the resource bundle field created at initialization.
+TXT_InitCodeFormatDesc=The format used to initialize resource bundle fields.
 TXT_RegularExpression=Non-Internationalization Regular Expression Format
-TXT_RegularExpressionDesc=Noninternationalized regular expression is used to evaluate whether hard-coded strings are internationalized.
+TXT_RegularExpressionDesc=Regular expression that returns all hard-coded strings.
 TXT_I18nRegularExpression=Internationalization Regular Expression Format
-TXT_I18nRegularExpressionDesc=Internationalized regular expression is used to evaluate whether hard-coded strings are internationalized.
+TXT_I18nRegularExpressionDesc=Regular expression that returns all internationalized strings.
 TXT_ReplaceResourceValue=Replace Resource Value
 TXT_ReplaceResourceValueDesc=Overrides the values of any existing keys in the resource bundle.
 TXT_ReplaceCodeFormat=Replace Code Format
-TXT_ReplaceCodeFormatDesc=Noninternationalized hard-coded strings in the resource bundle are replaced with the selected format.
+TXT_ReplaceCodeFormatDesc=Default code format for constructing internationalized strings.
 
 #I18nPanel
 CTL_CancelButton=Cancel
@@ -71,7 +71,7 @@ ACS_CTL_ReplaceButton=N/A
 CTL_SkipButton=Skip
 ACS_CTL_SkipButton=N/A
 LBL_Replace=Replace:
-ACS_I18nPanel=This panel allows you to choose or create Bundle, set format of replace string and select key and value.
+ACS_I18nPanel=This panel allows you to choose or create a bundle, set the replace string format, and set property keys and values.
 
 
 #I18nUtil
@@ -83,7 +83,7 @@ TXT_Cntrl=any character with octal codes 000 through 037, or DEL (octal code 177
 TXT_Digit=any digit.
 TXT_FieldIdentifier=field identifier initialized with bundle.
 TXT_Graph=any character that is not a [:alnum:] or [:punct:] class.
-TXT_HardString=hardcoded string to be found.
+TXT_HardString=hard-coded string to be found.
 TXT_Javapart=java part.
 TXT_Javastart=java start.
 TXT_KeyHelp=key from resource.
@@ -92,7 +92,7 @@ TXT_PackageNameDots=package name of bundle separated by dots.
 TXT_PackageNameSlashes=package name of bundle separated with slashes.
 TXT_Print=any character from the [:space:] class, and any character that is not in the [:graph:] class.
 TXT_Punct=any one of ! \" # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _ ` { | } ~
-TXT_SourceDataObjectName=name of target data object. (The name of the file that is searched for the hardcoded string.)
+TXT_SourceDataObjectName=name of target data object. (The name of the file that is searched for the hard-coded string.)
 TXT_Space=any character of CR FF HT NL VT SPACE.
 TXT_Upper=any upper case letter.
 TXT_Xdigit=any hexa digit character.
@@ -118,10 +118,10 @@ MSG_CantInsertInGuarded=Cannot insert internationalized string in guarded block.
 #JavaI18nString
 EXC_TemplateNotFound=Template for creating a new properties file not found.
 # {0}
-MSG_RegExpCompileError=Found {0} hardcoded string evaluation error. Process it anyway?
+MSG_RegExpCompileError=Found {0} hard-coded string evaluation error. Process it anyway?
 
 #JavaI18nSupport
-MSG_CouldNotReplace=Could not replace a hardcoded string that was found.
+MSG_CouldNotReplace=One of the hard-coded strings found could not be replaced.
 
 #JavaPropertyPanel
 CTL_Arguments=Arguments...
@@ -225,7 +225,7 @@ LBL_Key=Key:
 LBL_ReplaceFormat=Replace String:
 LBL_ReplaceStringFormatEditor=Replace Code Format Editor
 LBL_Value=Value:
-ACS_PropertyPanel=This panel allows you to set format of replace string and select key and value.
+ACS_PropertyPanel=This panel allows you to set  the code format of internationalized strings and set property keys and values.
 ACS_valueText=N/A
 ACS_commentText=N/A
 ACS_replaceFormatTextField=N/A
@@ -251,7 +251,7 @@ LBL_BundleName=Bundle Name:
 LBL_ResourceTitleBorder=Choose Bundle
 LBL_TemplateName=Object &Name
 ACS_TEXT_ObjectNameInputPanel=N/A
-ACS_ResourcePanel=This panel allows you to create new or open existing Bundle.
+ACS_ResourcePanel=This panel allows you to create new bundle or open and existing one.
 
 #filenames
 Services/org-netbeans-modules-i18n-I18nOptions.settings=Internationalization
