--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -23,15 +23,15 @@ ACS_sourceCombo=N/A
 ACS_HardStringWizardPanel=Modify Found Strings.
 ACS_CTL_sourceCombo=N/A
 ACS_hardStringTable=N/A
-LBL_FoundStrings=Found Hard Coded Strings:
+LBL_FoundStrings=Found Hard-Coded Strings:
 LBL_FoundStrings_Mnem=F
-LBL_HardString=Hard Coded String
+LBL_HardString=Hard-Coded String
 LBL_Internationalizing=Internationalizing
 LBL_Key=Key
 LBL_Value=Value
 TXT_ModifyStrings=Modify Found Strings.
-TXT_NoHardstrings=No hard coded noninternationalized strings were found.
-TXT_NoHardstringsSource=No hard coded noninternationalized strings found for this source.
+TXT_NoHardstrings=No hard-coded noninternationalized strings were found.
+TXT_NoHardstringsSource=No hard-coded noninternationalized strings found for this source.
 
 # I18nTestWizardAction
 LBL_TestWizardActionName=Internationalization &Test Wizard...
