--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -47,15 +47,17 @@ TXT_GenerateField=Generate Field
 TXT_GenerateFieldDesc=Generates field initialized with bundle for java sources.
 TXT_AdvancedWizard=Advanced Wizard
 TXT_AdvancedWizardDesc=If True, displays an additional pane in wizard for generating fields that reference resource bundles.
-TXT_InitCodeFormat=Init Code Format
+TXT_InitCodeFormat=Bundle Code Format
 TXT_InitCodeFormatDesc=The format used to initialize resource bundle fields.
-TXT_RegularExpression=Non-Internationalization Regular Expression Format
-TXT_RegularExpressionDesc=Regular expression that returns all hard-coded strings.
-TXT_I18nRegularExpression=Internationalization Regular Expression Format
-TXT_I18nRegularExpressionDesc=Regular expression that returns all internationalized strings.
-TXT_ReplaceResourceValue=Replace Resource Value
+#used by internationalization wizard
+TXT_RegularExpression=I18zed String Format
+TXT_RegularExpressionDesc=Regular expression that returns all internationalized strings.
+#used by test tool to find missing keys
+TXT_I18nRegularExpression=I18n Key Format
+TXT_I18nRegularExpressionDesc=Regular expression that returns internationalization keys.
+TXT_ReplaceResourceValue=Overwrite Resource Value
 TXT_ReplaceResourceValueDesc=Overrides the values of any existing keys in the resource bundle.
-TXT_ReplaceCodeFormat=Replace Code Format
+TXT_ReplaceCodeFormat=I18n Code Format
 TXT_ReplaceCodeFormatDesc=Default code format for constructing internationalized strings.
 
 #I18nPanel
