#17967 fixed. Added a help button.

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -65,6 +65,7 @@ CTL_CancelButton=Cancel
 CTL_CancelButton_Mnem=C
 ACS_CTL_CancelButton=N/A
 CTL_HelpButton=Help
+CTL_HelpButton_Mnem=H
 ACS_CTL_HelpButton=N/A
 CTL_InfoButton=Info
 ACS_CTL_InfoButton=N/A
