--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -50,11 +50,15 @@ TXT_SelectSourcesHelp=Select Sources to Internationalize.
 
 # I18nWizardDescriptor
 CTL_Next=Next >
+ACSD_NEXT=Moves to next step of the wizard.
 CTL_Next_Mnem=N
 CTL_Previous=< Back
+ACSD_PREVIOUS=Moves to previous step of the wizard.
 CTL_Previous_Mnem=B
 CTL_Finish=Finish
+ACSD_FINISH=n/a
 CTL_Cancel=Cancel
+ACSD_CANCEL=n/a
 
 # ResourceWizardPanel
 CTL_Resource=Resource
