Mnemonic change, bug #19008

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -222,7 +222,7 @@ ACS_paramsList=N/A
 
 #PropertyPanel
 CTL_Format=Format...
-CTL_Format_Mnem=r
+CTL_Format_Mnem=F
 ACS_CTL_Format=N/A
 LBL_Key=Key:
 LBL_ReplaceFormat=Replace String:
