mnemonic change, bug #19024

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -153,15 +153,15 @@ FCTL_Format_Mnem=C
 CTL_HelpButton_Mnem=H
 CTL_InfoButton_Mnem=I
 CTL_SkipButton_Mnem=S
-CTL_ReplaceButton_Mnem=R
+CTL_ReplaceButton_Mnem=e
 CTL_Parameters=Parameters...
 CTL_ParamsPanelTitle=Message Format Arguments
 LBL_Field=Field:
 LBL_Field_Mnem=l
 LBL_Identifier=Identifier:
-LBL_Identifier_Mnem=I
+LBL_Identifier_Mnem=d
 LBL_InitFormat=Init String:
-LBL_InitFormat_Mnem=n
+LBL_InitFormat_Mnem=I
 LBL_InitStringFormatEditor=Init Code Format Editor
 LBL_Modifiers=Modifiers:
 ACS_staticCheck=N/A
@@ -222,7 +222,7 @@ ACS_paramsList=N/A
 
 #PropertyPanel
 CTL_Format=Format...
-CTL_Format_Mnem=F
+CTL_Format_Mnem=r
 ACS_CTL_Format=N/A
 LBL_Key=Key:
 LBL_ReplaceFormat=Replace String:
