Small a11y fixes: missing descriptions and mnemonics conflicts.

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -148,7 +148,7 @@ CTL_BrowseButton_Mnem=B
 CTL_Format_Mnem=F
 LBL_Value_Mnem=V
 LBL_Key_Mnem=K
-LBL_Comment_Mnem=m
+LBL_Comment_Mnem=t
 FCTL_Format_Mnem=C
 CTL_HelpButton_Mnem=H
 CTL_InfoButton_Mnem=I
