--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -159,7 +159,7 @@ CTL_ParamsPanelTitle=Message Format Arguments
 LBL_Field=Field:
 LBL_Field_Mnem=l
 LBL_Identifier=Identifier:
-LBL_Identifier_Mnem=d
+LBL_Identifier_Mnem=E
 LBL_InitFormat=Init String:
 LBL_InitFormat_Mnem=I
 LBL_InitStringFormatEditor=Init Code Format Editor
