Mnemonic added, bug #19343

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -226,6 +226,7 @@ CTL_Format_Mnem=r
 ACS_CTL_Format=N/A
 LBL_Key=Key:
 LBL_ReplaceFormat=Replace String:
+LBL_ReplaceFormat_Mnem=p
 LBL_ReplaceStringFormatEditor=Replace Code Format Editor
 LBL_Value=Value:
 ACS_PropertyPanel=This panel allows you to set  the code format of internationalized strings and set property keys and values.
