--- a/i18n/src/org/netbeans/modules/i18n/Layer.xml
+++ b/i18n/src/org/netbeans/modules/i18n/Layer.xml
@@ -39,16 +39,16 @@ Microsystems, Inc. All Rights Reserved.
     
         <!-- I18N Settings -->
         <file name="org-netbeans-modules-i18n-I18nOptions.settings" url="I18nOptions.settings">
-            <attr name="SystemFileSystem.localizingBundle" stringValue="org.netbeans.modules.i18n.Bundle"/>
-            <attr name="SystemFileSystem.icon" urlValue="nbres:/org/netbeans/modules/i18n/i18nAction.gif"/>
+            <attr name="SystemFileSystem.localizingBundle" stringvalue="org.netbeans.modules.i18n.Bundle"/>
+            <attr name="SystemFileSystem.icon" urlvalue="nbres:/org/netbeans/modules/i18n/i18nAction.gif"/>
         </file>
 
         <!-- Locale External Execution -->
         <folder name="Executor">
             <file name="org-netbeans-modules-i18n-LocaleExecutor.settings" url="LocaleExecutor.settings">
-                <attr name="SystemFileSystem.localizingBundle" stringValue="org.netbeans.modules.i18n.Bundle"/>
-                <attr name="SystemFileSystem.icon" urlValue="nbres:/org/netbeans/core/resources/executionTypes.gif"/>
-                <attr name="SystemFileSystem.layer" stringValue="project"/>
+                <attr name="SystemFileSystem.localizingBundle" stringvalue="org.netbeans.modules.i18n.Bundle"/>
+                <attr name="SystemFileSystem.icon" urlvalue="nbres:/org/netbeans/core/resources/executionTypes.gif"/>
+                <attr name="SystemFileSystem.layer" stringvalue="project"/>
             </file>
         </folder>
     </folder>
@@ -70,8 +70,8 @@ SystemFileSystem
         <folder name="Services">
             <folder name="Executor">
                 <file name="org-netbeans-modules-i18n-LocaleExecutor.settings" url="LocaleExecutor.settings">
-                    <attr name="SystemFileSystem.localizingBundle" stringValue="org.netbeans.modules.i18n.Bundle"/>
-                    <attr name="SystemFileSystem.icon" urlValue="nbres:/org/netbeans/core/resources/executionTypes.gif"/>
+                    <attr name="SystemFileSystem.localizingBundle" stringvalue="org.netbeans.modules.i18n.Bundle"/>
+                    <attr name="SystemFileSystem.icon" urlvalue="nbres:/org/netbeans/core/resources/executionTypes.gif"/>
                     <attr name="template" boolvalue="true"/>
                 </file>
             </folder>
