--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -76,7 +76,7 @@ TXT_SearchingIn=Searching in
 TXT_SelectResource=Select Resource for Sources
 TXT_SelectTestResource=Select Resource for Source Files
 ACS_ResourceWizardPanel=Select Resource for Sources
-MSG_ResourcePanel_desc=Selected the resource bundle(s) used for each file's internationalized strings. Click Select All to check one resource bundle for all files.
+MSG_ResourcePanel_desc=Select the resource bundle(s) where you want to store each file's internationalized strings. Click Select All to check one resource bundle for all files.
 
 # SourceWizardPanel
 CTL_AddSource=Add Source(s)
@@ -93,7 +93,7 @@ LBL_SelectSources=Select Sources
 TXT_SelectSources=Select Sources to Internationalize
 TXT_SelecTestSources=Select sources to test their internationalized strings.
 ACS_SourceWizardPanel=N/A
-MSG_SorcesPanel_desc=Select source files that you want to internationalize. Use buttons for this purpose.
+MSG_SorcesPanel_desc=Select the source files that you want to internationalize. Use the buttons to add and remove source files.
 
 # TestStringWizardPanel
 LBL_I18nString=Internationalized String
