#21565 fixed by making panels ctx. sensitive.

--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -48,7 +48,7 @@ TXT_FoundStringsHelp=Modify Found Strings
 TXT_SelectResourceHelp=Select Resource for All Sources
 TXT_SelectSourcesHelp=Select Sources to Internationalize
 
-# I18nWizardDescriptor
+## I18nWizardDescriptor.java
 CTL_Next=Next >
 ACSD_NEXT=Moves to next step of the wizard.
 CTL_Next_Mnem=N
@@ -60,7 +60,7 @@ ACSD_FINISH=n/a
 CTL_Cancel=Cancel
 ACSD_CANCEL=n/a
 
-# ResourceWizardPanel
+## ResourceWizardPanel.java
 CTL_Resource=Resource
 CTL_SelectResource=Select Resource
 CTL_SelectResource_Mnem=R
@@ -77,8 +77,9 @@ TXT_SelectResource=Select Resource for Sources
 TXT_SelectTestResource=Select Resource for Source Files
 ACS_ResourceWizardPanel=Select Resource for Sources
 MSG_ResourcePanel_desc=Select the resource bundle(s) where you want to store each file's internationalized strings. Click Select All to check one resource bundle for all files.
+MSG_ResourcePanel_test_desc=Select the resource bundle(s) where you want to search each file's internationalized string keys. Click Select All to check one resource bundle for all files.
 
-# SourceWizardPanel
+## SourceWizardPanel.java
 CTL_AddSource=Add Source(s)
 CTL_AddSource_Mnem=A
 ACS_CTL_AddSource=N/A
@@ -93,14 +94,17 @@ LBL_SelectSources=Select Sources
 TXT_SelectSources=Select Sources to Internationalize
 TXT_SelecTestSources=Select sources to test their internationalized strings.
 ACS_SourceWizardPanel=N/A
-MSG_SorcesPanel_desc=Select the source files that you want to internationalize. Use the buttons to add and remove source files.
+MSG_SourcesPanel_desc=Select the source files that you want to internationalize. Use the buttons to add and remove source files.
+MSG_SourcesPanel_test_desc=Select the source files that you want to test for internationalization keys existence. Use the buttons to add and remove source files.
 
-# TestStringWizardPanel
+## TestStringWizardPanel.java
 LBL_I18nString=Internationalized String
 TXT_AllI18nStrings=All internationalized strings have their resource.
 TXT_AllI18nStringsSource=All internationalized strings for this source have their resource.
 TXT_FoundMissingResource=Find Internationalized Strings With Missing Resource
 ACS_TestStringWizardPanel=N/A
+LBL_missing_keys=Found Strings with Missing Keys:
+LBL_missing_keys_mne=F
 
 ACS_ProgressWizardPanel=N/A
 
