#21140 new help Ids introduced.

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -20,7 +20,9 @@ MSG_StringNotFoundInGuarded=No hard-coded string found in guarded block yet.
 LBL_Arguments=Arguments:
 LBL_InitCodeFormat=Init Code Format:
 LBL_ReplaceCodeFormat=Replace Code Format:
+# negation gives all keys and bundle names
 LBL_NonI18nRegExpFormat=Non-Internationalization Regular Expression Format:
+# key
 LBL_I18nRegExpFormat=Internationalization Regular Expression Format:
 ACS_HelpStringCustomEditor=N/A
 ACS_HelpStringCombo=N/A
