grammar edits to wizard text

--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -76,7 +76,7 @@ TXT_SelectResource=Select Resource for Sources
 TXT_SelectTestResource=Select Resource for Source Files
 ACS_ResourceWizardPanel=Select Resource for Sources
 MSG_ResourcePanel_desc=Select the resource bundle(s) where you want to store each file's internationalized strings. Click Select All to check one resource bundle for all files.
-MSG_ResourcePanel_test_desc=Select the resource bundle(s) where you want to search each file's internationalized string keys. Click Select All to check one resource bundle for all files.
+MSG_ResourcePanel_test_desc=Select the resource bundle(s) that contain each file's internationalized string keys. Click Select All to check one resource bundle for all files.
 
 ## SourceWizardPanel.java
 CTL_AddSource=Add Source(s)
@@ -91,15 +91,15 @@ LBL_SelectedSources=Selected the resource bundle(s) to check for each file's int
 LBL_SelectedSources_Mnem=S
 LBL_SelectSources=Select Sources
 TXT_SelectSources=Select Sources to Internationalize
-TXT_SelecTestSources=Select sources to test their internationalized strings.
+TXT_SelecTestSources=Select Sources to Test for Missing Resources
 ACS_SourceWizardPanel=N/A
 MSG_SourcesPanel_desc=Select the source files that you want to internationalize. Use the buttons to add and remove source files.
-MSG_SourcesPanel_test_desc=Select the source files that you want to test for internationalization keys existence. Use the buttons to add and remove source files.
+MSG_SourcesPanel_test_desc=Select the source files that you want to check for internationalized strings with missing keys. Use the buttons to add and remove source files.
 
 ## TestStringWizardPanel.java
 LBL_I18nString=Internationalized String
-TXT_AllI18nStrings=All internationalized strings have their resource.
-TXT_AllI18nStringsSource=All internationalized strings for this source have their resource.
+TXT_AllI18nStrings=All internationalized strings have their keys.
+TXT_AllI18nStringsSource=All internationalized strings for this source have their keys.
 TXT_FoundMissingResource=Find Internationalized Strings With Missing Resource
 ACS_TestStringWizardPanel=N/A
 LBL_missing_keys=Found Strings with Missing Keys:
