#23807 string fetched from bundle.

--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -31,6 +31,7 @@ LBL_Value=Value
 TXT_ModifyStrings=Modify Found Strings
 TXT_NoHardstrings=No hard-coded noninternationalized strings were found.
 TXT_NoHardstringsSource=No hard-coded noninternationalized strings found for this source.
+PROP_cust_dialog_name=Customize Property
 
 # I18nTestWizardAction
 LBL_TestWizardActionName=Internationalization &Test Wizard...
