#24107 menu items reordering.

--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -34,14 +34,14 @@ TXT_NoHardstringsSource=No hard-coded noninternationalized strings found for thi
 PROP_cust_dialog_name=Customize Property
 
 # I18nTestWizardAction
-LBL_TestWizardActionName=Internationalization &Test Wizard...
+LBL_TestWizardActionName=Internationalization &Test Wizard
 LBL_TestWizardTitle=Internationalization Test Wizard
 TXT_FoundMissingResources=Find Internationalized Strings With Missing Resource
 TXT_SelectTestSources=Select Sources to Test
 TXT_SelectTestResources=Select Resource for Source Files
 
 # I18nWizardAction
-LBL_WizardActionName=&Internationalization Wizard...
+LBL_WizardActionName=&Internationalization Wizard
 LBL_WizardTitle=Internationalization Wizard
 TXT_AdditionalHelp=Modify additional values. (E.g. field generation.)
 TXT_FoundStringsHelp=Modify Found Strings
