#23673 source internalization improved.

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -16,14 +16,22 @@
 # existing string.
 MSG_StringNotFoundInGuarded=No hard-coded string found in guarded block yet.
 
-#HelpStringCustomEditor
+## HelpStringCustomEditor.java (and inner classes)
 LBL_Arguments=Arguments:
+#$InitCodeEditor
 LBL_InitCodeFormat=Init Code Format:
+LBL_InitCodeFormat_mne=I
+#$ReplaceCodeEditor
 LBL_ReplaceCodeFormat=Replace Code Format:
+LBL_ReplaceCodeFormat_mne=R
+#$RegExpEditor
 # negation gives all keys and bundle names
 LBL_NonI18nRegExpFormat=Non-Internationalization Regular Expression Format:
+LBL_NonI18nRegExpFormat_mne=N
+#$I18nRegExpEditor
 # key
 LBL_I18nRegExpFormat=Internationalization Regular Expression Format:
+LBL_I18nRegExpFormat_mne=I
 ACS_HelpStringCustomEditor=N/A
 ACS_HelpStringCombo=N/A
 ACS_HelpStringList=N/A
