--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -85,7 +85,8 @@ CTL_SkipButton=Skip
 ACS_CTL_SkipButton=N/A
 LBL_Replace=Replace:
 ACS_I18nPanel=This panel allows you to choose or create a bundle, set the replace string format, and set property keys and values.
-
+CTL_CloseButton=Close
+CTL_CloseButton_mne=C
 
 #I18nUtil
 TXT_Alnum=any character of [:digit:] or [:alpha:] class
@@ -271,3 +272,5 @@ ACS_ResourcePanel=This panel allows you to create new bundle or open and existin
 Services/org-netbeans-modules-i18n-I18nOptions.settings=Internationalization
 Services/Executor/org-netbeans-modules-i18n-LocaleExecutor.settings=Locale External Execution
 Templates/Services/Executor/org-netbeans-modules-i18n-LocaleExecutor.settings=Locale External Execution
+
+#---
