partial fix of #19337 - added '&' mnemonic signs to two bundle labels

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -258,10 +258,10 @@ ACS_CTL_BrowseButton=N/A
 CTL_NewButton=New...
 ACS_CTL_NewButton=N/A
 ACS_ResourceText=N/A
-CTL_SelectPropDO_Dialog_RootTitle=Select:
+CTL_SelectPropDO_Dialog_RootTitle=&Select:
 CTL_SelectPropDO_Dialog_Title=Select Resource Bundles
 CTL_Template_Dialog_Title=New Bundle
-CTL_Template_Dialog_RootTitle=Filesystem:
+CTL_Template_Dialog_RootTitle=&Filesystem:
 LBL_BundleName=Bundle Name:
 LBL_ResourceTitleBorder=Choose Bundle
 LBL_TemplateName=Object &Name
