--- a/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/Bundle.properties
@@ -82,10 +82,10 @@ MSG_ResourcePanel_test_desc=Select the resource bundle(s) that contain each file
 ## SourceWizardPanel.java
 CTL_AddSource=Add Source(s)
 CTL_AddSource_Mnem=A
-ACS_CTL_AddSource=N/A
+CTL_AddSource_desc=Add arbitrary file or folder (recursively) to be processed.
 CTL_RemoveSource=Remove Source(s)
 CTL_RemoveSource_Mnem=R
-ACS_CTL_RemoveSource=N/A
+CTL_RemoveSource_desc=Remove selected source from processing.
 ACS_sourcesList=N/A
 LBL_Filesystems=Filesystems:
 LBL_SelectedSources=Selected the resource bundle(s) to check for each file's internationalized strings. Click Select All to check one resource bundle for all files.
@@ -93,7 +93,6 @@ LBL_SelectedSources_Mnem=S
 LBL_SelectSources=Select Sources
 TXT_SelectSources=Select Sources to Internationalize
 TXT_SelecTestSources=Select Sources to Test for Missing Resources
-ACS_SourceWizardPanel=N/A
 MSG_SourcesPanel_desc=Select the source files that you want to internationalize. Use the buttons to add and remove source files.
 MSG_SourcesPanel_test_desc=Select the source files that you want to check for internationalized strings with missing keys. Use the buttons to add and remove source files.
 
