#25752 use separate dialog title.

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -123,6 +123,7 @@ ACS_componentText=N/A
 ACS_foundInText=N/A
 
 #InsertI18NStringAction
+CTL_InsertI18nDialogTitle=Insert Internationalized String
 CTL_InsertI18nString=Insert Internationalized &String...
 CTL_OKButton=OK
 CTL_OKButton_Mnem=O
