made AspecJ ajc happy

--- a/i18n/build.xml
+++ b/i18n/build.xml
@@ -51,6 +51,7 @@ Microsystems, Inc. All Rights Reserved.
         <fileset dir="../core/external">
           <include name="xml-apis*.jar" />
         </fileset>
+        <pathelement location="src" /> <!-- makes AspectJ compiler (ajc) happy -->
       </classpath>
     </javac>
 
