#28769 unique bundle keys used.

--- a/i18n/src/org/netbeans/modules/i18n/java/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/java/Bundle.properties
@@ -13,3 +13,79 @@
 ## JavaReplacePanel.java
 LBL_InitCodeFormat=Init Code Format:
 LBL_InitCodeFormat_mne=I
+CTL_Format=Format...
+CTL_Format_mne=r
+ACS_JavaReplacePanel=N/A
+CTL_DefaultRadio=<default>
+CTL_DefaultRadio_Mnem=d
+CTL_GenerateField= \ Generate Field
+CTL_GenerateField_Mnem=G
+CTL_RemoveButton_Mnem=R
+CTL_AddButton_Mnem=A
+LBL_Parameters_Mnem=g
+LBL_Code_Mnem=o
+LBL_Arguments_Mnem=g
+LBL_BundleName_Mnem=u
+CTL_NewButton_Mnem=N
+CTL_BrowseButton_Mnem=B
+LBL_Value_Mnem=V
+LBL_Key_Mnem=K
+LBL_Comment_Mnem=t
+FCTL_Format_Mnem=C
+CTL_HelpButton_Mnem=H
+CTL_InfoButton_Mnem=I
+CTL_SkipButton_Mnem=S
+CTL_ReplaceButton_Mnem=e
+CTL_Parameters=Parameters...
+LBL_Field=Field:
+LBL_Field_Mnem=l
+LBL_Identifier=Identifier:
+LBL_Identifier_Mnem=E
+LBL_InitFormat=Init String:
+LBL_InitFormat_Mnem=I
+LBL_InitStringFormatEditor=Init Code Format Editor
+LBL_Modifiers=Modifiers:
+ACS_staticCheck=N/A
+ACS_identifierTextField=N/A
+ACS_transientCheck=N/A
+ACS_defaultRadio=N/A
+ACS_fieldTextField=N/A
+ACS_initButton=N/A
+ACS_publicRadio=N/A
+ACS_generateCheck=N/A
+ACS_finalCheck=N/A
+ACS_privateRadio=N/A
+ACS_initTextField=N/A
+ACS_protectedRadio=N/A
+
+## JavaPropertyPanel.java
+CTL_Arguments=Arguments...
+ACS_CTL_Arguments=N/A
+CTL_Arguments_Mnem=g
+CTL_ParamsPanelTitle=Message Format Arguments
+
+## ParamsPanel.java
+ACS_ParamsPanel=N/A
+CTL_AddButton=Add
+ACS_CTL_AddButton=N/A
+CTL_AddButton_Mnem=A
+CTL_RemoveButton=Remove
+ACS_CTL_RemoveButton=N/A
+CTL_RemoveButton_Mnem=R
+LBL_Code=Code:
+LBL_Code_Mnem=o
+LBL_Comment=Comment:
+LBL_Parameters=Arguments:
+LBL_Parameters_Mnem=g
+ACS_paramsList=N/A
+
+## JavaI18nSupport.java
+MSG_CouldNotReplace=One of the hard-coded strings found could not be replaced.
+# {0}
+MSG_RegExpCompileError=Found {0} hard-coded string evaluation error. Process it anyway?
+
+## JavaResourceHelpder.java
+EXC_TemplateNotFound=Template for creating a new properties file not found.
+
+
+#---
